product card center align fix

--- a/node-app/src/views/core/components/content/container/style.scss
+++ b/node-app/src/views/core/components/content/container/style.scss
@@ -719,7 +719,7 @@ ul {
 
 /* styles for related resource start */
 .cmp-related-resource {
-	padding: 40px 24px;
+	padding: 20px 9px;
 	background: #F7F7F7;
 	overflow: auto;
 	.icon-parent {
@@ -751,7 +751,8 @@ ul {
 		}
 		h3 {
 			font-size: 22px;
-			line-height: 28px;
+            line-height: 28px;
+            font-weight: 700;
 		}
 	}
 	.cmp-text {
@@ -765,16 +766,7 @@ ul {
 			margin-left: 15px;
 		}
     }
-    .cmp-text {
-        ul{
-            margin-left: 0em !important;
-            li::before{
-                width: 1rem !important;
-                padding-left: 0px !important;
-                margin-left: 0em !important;
-                }
-            }
-        }
+
 }
 @media (min-width: 768px) {
 	.cmp-related-resource {
